--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="exe1.css">
+  <link rel="stylesheet" href="style.css">
   <title>Modelo de Exercico</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
       <input type="number" name="passo" id="passo" ><br>
       <input type="button" value="Contar" onclick="contar()">
     </div>
-    <div id="res">
+    <div id="resposta">
       <p>Contando:</p>
      
     </div>
@@ -29,6 +29,6 @@
   <footer>
     <p>&copy; CursoEmVideo</p>
   </footer>
-  <script src="ex1.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
